-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0 Beta1
-
None
-
-
a61d537f0 (dev), 29f11d629 (6.5)
Try the attached example with a multiscreen setup. The cursor is updated on primary screen but it isn't on a secondary screen. Custom cursor shapes (Qt::BitmapCursor) work.
- resulted from
-
QTBUG-67373 Drop Xlib / libXcurosr dependency from QXcbCursor
-
- Closed
-
| For Gerrit Dashboard: QTBUG-110434 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 455274,2 | xcb: Fix QXcbCursor for secondary screen | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 456460,2 | xcb: Fix QXcbCursor for secondary screen | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |